@@ -1,21 +1,34 @@
 #!/usr/bin/pugs
 use v6;
 
+# External packages used by packages in this file, that don't export symbols:
+use Locale::KeyedText-(1.72.0...);
+use Rosetta-(0.721.0...);
+
 ###########################################################################
 ###########################################################################
 
 # Constant values used by packages in this file:
-my Str %TEXT_STRINGS is readonly = (
-);
+# (None Yet)
 
 ###########################################################################
 ###########################################################################
 
-module Rosetta::Engine::Native::L::en-0.1.0 {
-    sub get_text_by_key (Str $msg_key!) returns Str {
-        return %TEXT_STRINGS{$msg_key};
-    }
-} # module Rosetta::Engine::Native::L::en
+class Rosetta::Engine::Example-0.721.0 {
+
+    # External packages used by the Rosetta::Engine::Example class, that do export symbols:
+    # (None Yet)
+
+    # Attributes of every Rosetta::Engine::Example object:
+    # (None Yet)
+
+###########################################################################
+
+
+
+###########################################################################
+
+} # class Rosetta::Engine::Example
 
 ###########################################################################
 ###########################################################################
@@ -26,12 +39,12 @@ module Rosetta::Engine::Native::L::en-0.1.0 {
 
 =head1 NAME
 
-Rosetta::Engine::Native::L::en -
-Localization of Rosetta::Engine::Native for English
+Rosetta::Engine::Example -
+Self-contained reference implementation of a Rosetta Engine
 
 =head1 VERSION
 
-This document describes Rosetta::Engine::Native::L::en version 0.1.0.
+This document describes Rosetta::Engine::Example version 0.721.0.
 
 =head1 SYNOPSIS
 
@@ -57,6 +70,12 @@ I<This documentation is pending.>
 
 This file requires any version of Perl 6.x.y that is at least 6.0.0.
 
+It also requires these Perl 6 classes that are on CPAN:
+L<Locale::KeyedText-(1.72.0...)|Locale::KeyedText> (for error messages).
+
+It also requires these Perl 6 classes that are in the current distribution:
+L<Rosetta-0.721.0|Rosetta>.
+
 =head1 INCOMPATIBILITIES
 
 None reported.
@@ -75,15 +94,14 @@ Darren R. Duncan (C<perl@DarrenDuncan.net>)
 
 =head1 LICENCE AND COPYRIGHT
 
-This file is part of the Rosetta DBMS framework, though it is
-distributed separately from L<Rosetta> itself.
+This file is part of the Rosetta DBMS framework.
 
 Rosetta is Copyright (c) 2002-2006, Darren R. Duncan.
 
-See the LICENCE AND COPYRIGHT of L<Rosetta::Engine::Native> for details.
+See the LICENCE AND COPYRIGHT of L<Rosetta> for details.
 
 =head1 ACKNOWLEDGEMENTS
 
-The ACKNOWLEDGEMENTS in L<Rosetta::Engine::Native> apply to this file too.
+The ACKNOWLEDGEMENTS in L<Rosetta> apply to this file too.
 
 =cut
